--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </div>
 
-        <!-- PLANS SECTION -->
+            <!-- PLANS SECTION -->
             <section>
                 <div class="main-container">
                     <h2>Trova il piano business che fa per te</h2>
@@ -112,7 +112,7 @@
 
                         <div class="containerPlan">
                             <div class="single">
-                                <i class="fa-solid fa-user"></i>Team
+                                <i class="fa-solid fa-users"></i>Team
                             </div>
                             <hr>
                             <div class="single-content">
@@ -138,7 +138,7 @@
                         
                         <div class="containerPlan">
                             <div class="single">
-                                <i class="fa-solid fa-user"></i>Azienda
+                                <i class="fa-solid fa-building"></i>Azienda
                             </div>
                             <hr>
                             <div class="single-content">
@@ -164,7 +164,7 @@
                 
                     <div class="team">
                         <div class="contentTeam">
-                            <i class="fa-solid fa-user"></i>Team
+                            <i class="fa-solid fa-building"></i>Team
                         </div>
                         <hr>
                         <div class="conTm">
@@ -309,24 +309,25 @@
                     </div> 
                 </div>
             </section>
+
             <!-- FAQ SECTION -->
             <section id="faq">
-            <div class="containerSmall4">
-                <h2>Domande Frequenti</h2>
-                <hr class="faq-space">
-                <h5 class="faq-content">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5><i class="fa-solid fa-chevron-down"></i>
-                <hr class="faq-space">
-                <h5 class="faq-content">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5><i class="fa-solid fa-chevron-down"></i>
-                <hr class="faq-space">
-                <h5 class="faq-content">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5><i class="fa-solid fa-chevron-down"></i>
-                <hr class="faq-space">
-            </div>
+                <div class="containerSmall4">
+                    <h2>Domande Frequenti</h2>
+                    <hr class="faq-space">
+                    <h5 class="faq-content">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5><i class="fa-solid fa-chevron-down"></i>
+                    <hr class="faq-space">
+                    <h5 class="faq-content">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5><i class="fa-solid fa-chevron-down"></i>
+                    <hr class="faq-space">
+                    <h5 class="faq-content">Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</h5><i class="fa-solid fa-chevron-down"></i>
+                    <hr class="faq-space">
+                </div>
             </section>   
-     </main>
+    </main>
 
+ <!-- FOOTER SECTION -->
     <footer>
-        <!-- FOOTER SECTION -->
-        <div class="containerBig3">
+       <div class="containerBig3">
             <div class="containerSmart">
                 <div class="col">
                     <h3 class="foot-content">Dropbox</h3>
